--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,12 @@ body {
   background-color: #ffffff;
   font-family: "Roboto", sans-serif;
   color: #434455;
-  min-width: 1440px;
+  width: 100%;
 }
 
 .container {
-  width: 1158px;
+  max-width: 1158px;
+  width: 100%;
   margin: 0 auto;
   align-items: center;
 }
@@ -46,7 +47,7 @@ img {
 }
 
 .container-header {
-  width: 1158px;
+  max-width: 1158px;
   margin: 0 auto;
   display: flex;
   padding: 0 15px;
@@ -145,7 +146,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1440px;
+  width: 100%;
   height: 600px;
   padding: 188px 0;
   margin: auto;
@@ -154,7 +155,6 @@ img {
 
 .effect-title {
   max-width: 496px;
-  height: 120px;
   font-weight: 700;
   font-size: 56px;
   line-height: 60px;
@@ -191,7 +191,6 @@ img {
 
 .second-section {
   padding: 120px 0;
-  margin-bottom: 120px;
 }
 
 .visually-hidden {
@@ -210,7 +209,7 @@ img {
 .article-content {
   display: flex;
   list-style-type: none;
-  height: 104px;
+  min-height: 104px;
   justify-content: center;
   gap: 24px;
 }
@@ -229,8 +228,7 @@ img {
 }
 
 .second-section p {
-  width: 264px;
-  height: 72px;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: -2%;
@@ -248,6 +246,7 @@ img {
 .third-section {
   background-color: #f4f4fd;
   padding: 120px 0;
+  width: 100%;
 }
 
 .team-title {
@@ -403,7 +402,7 @@ img {
 }
 
 .portfolios {
-  width: 360px;
+  max-width: 360px;
   height: 120px;
   text-align: left;
   padding: 32px 16px;
@@ -439,6 +438,7 @@ img {
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
+  width: 100%;
 }
 .page-footer a {
   display: inline-block;
@@ -459,7 +459,8 @@ img {
 }
 
 .footer-container {
-  width: 1158px;
+  max-width: 1158px;
+  width: 100%;
   margin: 0 auto;
   align-items: center;
   display: flex;
@@ -571,8 +572,6 @@ MODAL PENCERE */
   border-color: #404bbf;
 }
 
-
-
 .inputs-position {
   width: 360px;
   height: 58px;
@@ -607,7 +606,6 @@ MODAL PENCERE */
   border-color: #404bbf;
 }
 
-
 .icons-form {
   width: 18px;
   height: 24px;
@@ -619,9 +617,9 @@ MODAL PENCERE */
   transition-property: fill;
 }
 
-.input-focus:focus+.icons-form {
+.input-focus:focus + .icons-form {
   fill: #404bbf;
- }
+}
 
 .checkbox-css {
   margin-top: 20px;
@@ -631,7 +629,7 @@ MODAL PENCERE */
   width: 360px;
   height: 16px;
   display: flex;
-  justify-content:left;
+  justify-content: left;
 }
 
 .checkbox-text {
@@ -792,4 +790,417 @@ MODAL PENCERE */
 .footer-form {
   display: flex;
   justify-content: center;
+}
+
+/*RESPONSİVE*/
+
+/* @media screen and (max-width: 320px) {
+  .container-header {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  .my-page-menu {
+    display: block;
+  }
+  .page-logo-title {
+    margin: 0 auto;
+  }
+  .page-menu-list {
+    display: block;
+  }
+
+  .page-adress-list {
+    display: block;
+  }
+
+  .mail {
+    margin: 0 auto;
+  }
+
+  .effect-title {
+    font-size: 36px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    max-width: 160px;
+    padding-top: 72px;
+  }
+
+  .first-section {
+    height: 432px;
+    gap: 0px;
+    opacity: 0px;
+    padding: 0px;
+  }
+
+ 
+  .article-content {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    align-items: center;
+  }
+
+  .article-content li {
+    width: 288px;
+  }
+
+  .article-list svg {
+    visibility: hidden;
+    position: absolute;
+  }
+
+  .title-content {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    text-align: center;
+  }
+
+  .second-section p {
+    text-overflow: ellipsis;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    width: 288px;
+  }
+
+  .our-team {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .portfolio-list {
+    display: flex;
+    flex-direction: column;
+    column-gap: 24px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .portfolio-card img {
+    width: 280px;
+  }
+
+  .fourth-section li {
+    width: 280px;
+    height: 353px;
+  }
+
+  .hidden {
+    width: 258px;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 72px;
+    text-align: center;
+    min-width: 288px;
+  }
+
+  .footer-content {
+    text-align: left;
+  }
+
+  .socialmedia {
+    text-align: center;
+  }
+  .footer-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .subscribe-modal {
+    margin-left: 0px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .social-media {
+    margin-left: 0px;
+    text-align: center;
+  }
+  .subscribe-label {
+    text-align: center;
+  }
+  .subs-button {
+    margin-top: 16px;
+  }
+} */
+
+@media screen and (max-width: 365px) {
+  .effect-title {
+    font-size: 36px;
+    line-height: 40px;
+    width: 216px;
+  }
+}
+
+@media screen and (max-width: 768.98px) {
+  .container-header {
+    display: flex;
+    padding: 16px 16px;
+  }
+
+  .page-menu-list {
+    display: none;
+  }
+
+  .page-adress-list {
+    display: none;
+  }
+
+  .mail {
+    margin: 0 auto;
+  }
+
+  .effect-title {
+    padding-top: 72px;
+  }
+
+  .first-section {
+    height: 432px;
+    padding: 0px;
+  }
+
+  .article-content {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    align-items: center;
+  }
+
+  .article-content li {
+    width: 288px;
+  }
+
+  .article-list svg {
+    visibility: hidden;
+    position: absolute;
+  }
+
+  .title-content {
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .second-section p {
+    font-size: 16px;
+    font-weight: 500;
+    text-align: left;
+    width: 100%;
+  }
+
+  .our-team {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .portfolio-list {
+    display: flex;
+    flex-direction: column;
+    column-gap: 24px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .portfolio-card img {
+    width: 280px;
+  }
+
+  .fourth-section li {
+    width: 280px;
+    height: 353px;
+  }
+
+  .hidden {
+    width: 258px;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 72px;
+    text-align: center;
+  }
+
+  .footer-content {
+    text-align: left;
+  }
+  .footer-logo a {
+    text-align: center;
+    margin-right: 0px;
+  }
+  .socialmedia {
+    text-align: center;
+  }
+  .footer-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .subscribe-modal {
+    margin-left: 0px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .social-media {
+    margin-left: 0px;
+    text-align: center;
+  }
+  .subscribe-label {
+    text-align: center;
+  }
+  .subs-button {
+    margin-top: 16px;
+  }
+}
+
+@media screen and (min-width: 768.99px) and (max-width: 1158px) {
+  .container-header {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+  }
+
+  .page-menu-list {
+    display: flex;
+  }
+
+  .page-adress-list {
+    display: block;
+    margin-left: 120px;
+  }
+
+  .mail {
+    margin: 0 auto;
+  }
+
+  .effect-title {
+    padding-top: 72px;
+  }
+
+  .first-section {
+    height: 432px;
+    gap: 0px;
+    opacity: 0px;
+    padding: 0px;
+  }
+
+  .second-section {
+    align-items: center;
+    margin-left: 0px;
+  }
+  .article-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px;
+    align-items: center;
+  }
+
+  .article-content li {
+    width: 356px;
+  }
+  .article-list svg {
+    visibility: hidden;
+    position: absolute;
+  }
+
+  .title-content {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+  }
+
+  .second-section p {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    width: 288px;
+  }
+
+  .our-team {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 120px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .portfolio-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .portfolio-card img {
+    width: 356px;
+  }
+
+  .fourth-section li {
+    width: 356px;
+    height: 416px;
+  }
+
+  .hidden {
+    width: 300px;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 540px;
+    gap: 60px;
+  }
+
+  .footer-form {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .social-media {
+    margin: 0px;
+  }
+
+  .subscribe-modal {
+    margin: 0px;
+  }
+}
+
+@media (min-resolution: 192dpi) {
+  .first-section {
+    background-image: radial-gradient(
+        circle,
+        rgba(46, 47, 66, 0) 0%,
+        rgba(46, 47, 66, 0.6) 70%
+      ),
+      linear-gradient(to bottom, rgba(46, 47, 66, 0.4), rgba(46, 47, 66, 0.7)),
+      url(../images/people-office@2x.jpg);
+  }
 }
